# email_agent

./: pyproject.toml
config/: prompts.py  var.py
src/: main.py  models.py  tools.py
