[project]
name = "email-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain==0.3.18",
    "langchain-anthropic==0.3.7",
    "langchain-openai==0.3.5",
    "langgraph==0.2.72",
    "langmem==0.0.8",
    "python-dotenv>=1.1.1",
]
